--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<dd>
 			<i>Competition Project | Dec 2014 - Feb 2015</i><br>
 			Represented IIT Mandi in Third Inter IIT Tech Meet in Data Analytics’ challenge. Developed feature based sentiment analysis scripts on scraped hotel reviews.  The scripts were automated and presented feature based ratings for the hotels for given city(after scraping reviews from multiple sources). Won first prize in the challenge.<br>
-			Skills used: <em>Java, Stanford CoreNLP, Python, Scrapy, Javascript, HTML</em>. [<a href="kgp-report.pdf">Report</a>, <a href="kgp-ppt.pptx">Pitch</a>
+			Skills used: <em>Java, Stanford CoreNLP, Python, Scrapy, Javascript, HTML</em>. [<a href="kgp-report.pdf">Report</a>, <a href="kgp-ppt.pptx">Pitch</a>]
 		</dd>
 		<dt><b>Social marketplace website</b>, Database Practicum</dt>
 		<dd>
