Updated resume link in index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 	<h1>Ankush Jindal</h1>
 	<hr>
-	<p>Studying Computer Science and Engineering at <a href="http://iitmandi.ac.in/">IIT Mandi</a>. Recently went to <a href="https://www.itu.dk/">ITU Copenhagen</a> for semester exchange. Right now I am doing internship at <a href="http://khoslalabs.com/">Khosla Labs</a>. Python and Android developer who gets really passionate about product that I work on right from the service and design to the business. Have a look at my <a href="Resume.pdf">resume</a>, I am currently <i>accepting job offers</i>.</p>
+	<p>Studying Computer Science and Engineering at <a href="http://iitmandi.ac.in/">IIT Mandi</a>. Recently went to <a href="https://www.itu.dk/">ITU Copenhagen</a> for semester exchange. Right now I am doing internship at <a href="http://khoslalabs.com/">Khosla Labs</a>. Python and Android developer who gets really passionate about product that I work on right from the service and design to the business. Have a look at my <a href="B13109_AnkushJindal.pdf">resume</a>, I am currently <i>accepting job offers</i>.</p>
 	<hr>
 
 	<span class="show" tabindex="1">Projects and Work Experiences</span>
