--- a/index.html
+++ b/index.html
@@ -31,12 +31,23 @@
 <body>
 	<h1>Ankush Jindal</h1>
 	<hr>
-	<p>Studying Computer Science and Engineering at <a href="http://iitmandi.ac.in/">IIT Mandi</a>. Recently went to <a href="https://www.itu.dk/">ITU Copenhagen</a> for semester exchange. Right now I am doing internship at <a href="http://khoslalabs.com/">Khosla Labs</a>. Python and Android developer who gets really passionate about product that I work on right from the service and design to the business. Have a look at my <a href="B13109_AnkushJindal.pdf">resume</a>, <strike> I am currently <i>accepting job offers</i>.</strike></p>
+	<p>Cofounder at <a href="http://thesolarlabs.com">The Solar Labs</a>.</p>
 	<hr>
 
 	<span class="show" tabindex="1">Projects and Work Experiences</span>
 	<section>
 	<dl>
+		<dt><b><a href="Place It Now</a></b>, -- Mandi, Cofounder</dt>
+		<dd>
+			<i>Startup | Dec 2017 - Feb 2017</i><br>
+			A canteen queue and order managmenet soution deployed in IIT Mandi.<br>
+		</dd>
+		<dt><b>Streaming Based Genome Mapping on Apache Flink</a></b>, -- IIT Mandi</dt>
+		<dd>
+			<i>Major Technical Project | June 2016 - June 2017</i><br>
+			Created streaming based distributed computing solution for genome mapping in a big data problem. Genome Mapping have been the bottleneck for the genome sequence detection and doing it in streaming maner will help in moving fast at times of disease outbreak or emergency situations.<br>
+			Skills used: <em>Spark, Kafka, Flink, Java</em>
+		</dd>
 		<dt><b><a href="http://khoslalabs.com/">Khosla Labs</a></b>, -- Bengaluru, Software Developer</dt>
 		<dd>
 			<i>Internship | June 2016 - Aug 2016</i><br>
@@ -133,22 +144,10 @@
 	<section>
 		<a href="https://github.com/ankushjindal">Github</a>
 		<a href="https://in.linkedin.com/in/jindalankush95">Linkedin</a>
-		<a href="https://news.ycombinator.com/user?id=travis_bickle">Hacker News</a>
-		<a href="https://www.reddit.com/user/iamnottravis/">Reddit</a>
-		<a href="http://stackexchange.com/users/3469088/travis-bickle">Stack Exchange</a>
-		<br><a href="https://www.facebook.com/jindal.ankush95/">Facebook</a>
 		<a href="https://twitter.com/jindalankush95">Twitter</a>
-		<a href="https://www.quora.com/profile/Ankush-Jindal-2">Quora</a>
-		<a href="https://medium.com/@jindalankush95">Medium</a>
-		<a href="http://www.imdb.com/user/ur28414609/">IMDb</a>
-		<br>
-		<a href="mailto:jindal.ankush95@gmail.com">Personal email</a>
-		<a href="mailto:a_jindal@students.iitmandi.ac.in">IIT Mandi email</a>
-		<a href="mailto:anji@itu.dk">ITU Copenhagen email</a>
-		<a href="http://students.iitmandi.ac.in/~a_jindal/">Public folder</a>
 	</section>
 
 	<hr style="margin-bottom:1px">
-	<font size="2"><p style="margin-top:1px"><a href="mailto:jindal.ankush95@gmail.com"><img src="email.png" alt="Email" align="middle" style="margin-right:10px;"></a><a href="https://github.com/ankushjindal/ankushjindal.github.io"><img src="github.png" alt="Github" align="middle"></a> <span style="float:right;">Last updated on 2016-08-02</span></p></font>
+	<font size="2"><p style="margin-top:1px"><a href="mailto:jindal.ankush95@gmail.com"><img src="email.png" alt="Email" align="middle" style="margin-right:10px;"></a><a href="https://github.com/ankushjindal/ankushjindal.github.io"><img src="github.png" alt="Github" align="middle"></a> <span style="float:right;">Last updated on 2017-10-02</span></p></font>
 </body>
 </html>
