--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<span class="show" tabindex="1">Projects and Work Experiences</span>
 	<section>
 	<dl>
-		<dt><b><a href="Place It Now</a></b>, -- Mandi, Cofounder</dt>
+		<dt><b><a href="https://play.google.com/store/apps/developer?id=PlaceItNow">Place It Now</a></b>, -- Mandi, Cofounder</dt>
 		<dd>
 			<i>Startup | Dec 2017 - Feb 2017</i><br>
 			A canteen queue and order managmenet soution deployed in IIT Mandi.<br>
